Add basic implementation

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <meta name="theme-color" content="#ffffff" />
+    <meta name="theme-color" content="#ebf6e8" />
     <meta
       name="description"
       content="GrammarMate uses ChatGPT to correct your English grammar with lightning-fast speed and accuracy. Simply input your text and get instant suggestions to improve your writing."
