Use netlify url for meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,11 @@
 
     <meta property="og:title" content="GrammarMate" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://example.com" />
-    <meta property="og:image" content="https://example.com/logo192.png" />
+    <meta property="og:url" content="https://grammarmate.netlify.app" />
+    <meta
+      property="og:image"
+      content="https://grammarmate.netlify.app/logo192.png"
+    />
     <meta
       property="og:description"
       content="GrammarMate uses ChatGPT to correct your English grammar with lightning-fast speed and accuracy. Simply input your text and get instant suggestions to improve your writing."
@@ -34,14 +37,17 @@
     <meta property="og:locale" content="en_GB" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="example.com" />
-    <meta property="twitter:url" content="https://example.com" />
+    <meta property="twitter:domain" content="grammarmate.netlify.app" />
+    <meta property="twitter:url" content="https://grammarmate.netlify.app" />
     <meta name="twitter:title" content="GrammarMate" />
     <meta
       name="twitter:description"
       content="GrammarMate uses ChatGPT to correct your English grammar with lightning-fast speed and accuracy. Simply input your text and get instant suggestions to improve your writing."
     />
-    <meta name="twitter:image" content="https://example.com/logo192.png" />
+    <meta
+      name="twitter:image"
+      content="https://grammarmate.netlify.app/logo192.png"
+    />
 
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- https://maskable.app/editor -->
